webstack_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstack
  namespace: kube-ops
  labels:
    app: webstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstack
  template:
    metadata:
      labels:
        app: webstack
    spec:
      containers:
      - name: webstack
        image: "harbor.example.cn/tools/webstack:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
      #  command: ["/entrypoint.sh", "new-server"]
        resources:
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - mountPath: /opt/navi
          name: webstack
          subPath: navi
      volumes:
      - name: webstack
        persistentVolumeClaim:
          claimName: webstack-pvc    #绑定上面创建的 PVC

---
apiVersion: v1
kind: Service
metadata:
  name: webstack
  namespace: kube-ops
spec:
  #type: NodePort
  #ports:
  #  - name: sonar-http
  #    port: 9000
  #    nodePort: 39000
  #selector:
  #  app: sonarqube
  ports:
    - name: webstack-http
      port: 8000
      targetPort: 8000
  selector:
    app: webstack

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webstack
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: daohang.example.cn
    http:
      paths:
      - backend:
          serviceName: webstack
          servicePort: 8000
